@@ -1,11 +1,10 @@
 package org.zalando.nakadi.service;
 
+import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Multimap;
-import org.json.JSONObject;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.DependsOn;
 import org.springframework.stereotype.Component;
 import org.springframework.transaction.TransactionException;
@@ -20,9 +19,8 @@ import org.zalando.nakadi.domain.EventTypeOptions;
 import org.zalando.nakadi.domain.Feature;
 import org.zalando.nakadi.domain.Subscription;
 import org.zalando.nakadi.domain.Timeline;
+import org.zalando.nakadi.domain.kpi.EventTypeLogEvent;
 import org.zalando.nakadi.enrichment.Enrichment;
-import org.zalando.nakadi.exception.SchemaEvolutionException;
-import org.zalando.nakadi.exception.SchemaValidationException;
 import org.zalando.nakadi.exceptions.runtime.AccessDeniedException;
 import org.zalando.nakadi.exceptions.runtime.AuthorizationSectionException;
 import org.zalando.nakadi.exceptions.runtime.CannotAddPartitionToTopicException;
@@ -42,6 +40,8 @@ import org.zalando.nakadi.exceptions.runtime.NoSuchEventTypeException;
 import org.zalando.nakadi.exceptions.runtime.NoSuchPartitionStrategyException;
 import org.zalando.nakadi.exceptions.runtime.NoSuchSubscriptionException;
 import org.zalando.nakadi.exceptions.runtime.NotFoundException;
+import org.zalando.nakadi.exceptions.runtime.SchemaEvolutionException;
+import org.zalando.nakadi.exceptions.runtime.SchemaValidationException;
 import org.zalando.nakadi.exceptions.runtime.ServiceTemporarilyUnavailableException;
 import org.zalando.nakadi.exceptions.runtime.TimelineException;
 import org.zalando.nakadi.exceptions.runtime.TopicConfigException;
@@ -55,7 +55,6 @@ import org.zalando.nakadi.plugin.api.authz.AuthorizationService;
 import org.zalando.nakadi.repository.TopicRepository;
 import org.zalando.nakadi.repository.db.EventTypeRepository;
 import org.zalando.nakadi.repository.db.SubscriptionDbRepository;
-import org.zalando.nakadi.repository.db.SubscriptionTokenLister;
 import org.zalando.nakadi.repository.kafka.PartitionsCalculator;
 import org.zalando.nakadi.service.publishing.NakadiAuditLogPublisher;
 import org.zalando.nakadi.service.publishing.NakadiKpiPublisher;
@@ -98,7 +97,6 @@ public class EventTypeService {
     private final NakadiSettings nakadiSettings;
     private final TransactionTemplate transactionTemplate;
     private final NakadiKpiPublisher nakadiKpiPublisher;
-    private final String etLogEventType;
     private final NakadiAuditLogPublisher nakadiAuditLogPublisher;
     private final EventTypeOptionsValidator eventTypeOptionsValidator;
     private final AdminService adminService;
@@ -106,7 +104,6 @@ public class EventTypeService {
 
     private final EventTypeCache eventTypeCache;
     private final SchemaService schemaService;
-    private final SubscriptionTokenLister subscriptionTokenLister;
 
     @Autowired
     public EventTypeService(
@@ -123,13 +120,11 @@ public class EventTypeService {
             final TransactionTemplate transactionTemplate,
             final NakadiSettings nakadiSettings,
             final NakadiKpiPublisher nakadiKpiPublisher,
-            @Value("${nakadi.kpi.event-types.nakadiEventTypeLog}") final String etLogEventType,
             final NakadiAuditLogPublisher nakadiAuditLogPublisher,
             final EventTypeOptionsValidator eventTypeOptionsValidator,
             final EventTypeCache eventTypeCache,
             final SchemaService schemaService,
             final AdminService adminService,
-            final SubscriptionTokenLister subscriptionTokenLister,
             final ApplicationService applicationService) {
         this.eventTypeRepository = eventTypeRepository;
         this.timelineService = timelineService;
@@ -144,22 +139,18 @@ public class EventTypeService {
         this.transactionTemplate = transactionTemplate;
         this.nakadiSettings = nakadiSettings;
         this.nakadiKpiPublisher = nakadiKpiPublisher;
-        this.etLogEventType = etLogEventType;
         this.nakadiAuditLogPublisher = nakadiAuditLogPublisher;
         this.eventTypeOptionsValidator = eventTypeOptionsValidator;
         this.adminService = adminService;
         this.eventTypeCache = eventTypeCache;
         this.schemaService = schemaService;
-        this.subscriptionTokenLister = subscriptionTokenLister;
         this.applicationService = applicationService;
     }
 
-    public List<EventType> list() {
-        return eventTypeRepository.list();
-    }
-
-    public List<EventType> list(final AuthorizationAttribute writers) {
-        return eventTypeRepository.list(writers);
+    public List<EventType> list(
+            @Nullable  final AuthorizationAttribute writer,
+            @Nullable final String owningApplication) {
+        return eventTypeRepository.list(Optional.ofNullable(writer), Optional.ofNullable(owningApplication));
     }
 
     public void create(final EventTypeBase eventType, final boolean checkAuth)
@@ -194,6 +185,8 @@ public class EventTypeService {
         }
 
         validateOwningApplication(null, eventType.getOwningApplication());
+
+        validateEventOwnerSelector(eventType);
 
         if (eventType.getAnnotations() == null) {
             eventType.setAnnotations(new HashMap<>());
@@ -234,12 +227,12 @@ public class EventTypeService {
                 throw new InternalNakadiException("Failed to create event type: " + ex.getMessage(), ex);
             }
         }
-        nakadiKpiPublisher.publish(etLogEventType, () -> new JSONObject()
-                .put("event_type", eventType.getName())
-                .put("status", "created")
-                .put("category", eventType.getCategory())
-                .put("authz", identifyAuthzState(eventType))
-                .put("compatibility_mode", eventType.getCompatibilityMode()));
+        nakadiKpiPublisher.publish(() -> new EventTypeLogEvent()
+                .setEventType(eventType.getName())
+                .setStatus("created")
+                .setCategory(eventType.getCategory().name())
+                .setAuthz(identifyAuthzState(eventType))
+                .setCompatibilityMode(eventType.getCompatibilityMode().name()));
 
         nakadiAuditLogPublisher.publish(Optional.empty(), Optional.of(eventType),
                 NakadiAuditLogPublisher.ResourceType.EVENT_TYPE, NakadiAuditLogPublisher.ActionType.CREATED,
@@ -381,12 +374,12 @@ public class EventTypeService {
                 }
             }
         }
-        nakadiKpiPublisher.publish(etLogEventType, () -> new JSONObject()
-                .put("event_type", eventTypeName)
-                .put("status", "deleted")
-                .put("category", eventType.getCategory())
-                .put("authz", identifyAuthzState(eventType))
-                .put("compatibility_mode", eventType.getCompatibilityMode()));
+        nakadiKpiPublisher.publish(() -> new EventTypeLogEvent()
+                .setEventType(eventTypeName)
+                .setStatus("deleted")
+                .setCategory(eventType.getCategory().name())
+                .setAuthz(identifyAuthzState(eventType))
+                .setCompatibilityMode(eventType.getCompatibilityMode().name()));
 
         nakadiAuditLogPublisher.publish(Optional.of(eventType), Optional.empty(),
                 NakadiAuditLogPublisher.ResourceType.EVENT_TYPE, NakadiAuditLogPublisher.ActionType.DELETED,
@@ -396,12 +389,10 @@ public class EventTypeService {
     private Multimap<TopicRepository, String> deleteEventTypeWithSubscriptions(final String eventType) {
         try {
             return transactionTemplate.execute(action -> {
-                eventTypeRepository.listEventTypesWithRowLock(Set.of(eventType),
-                        EventTypeRepository.RowLockMode.UPDATE);
+                final Set<String> eventTypes = ImmutableSet.of(eventType);
+                eventTypeRepository.listEventTypesWithRowLock(eventTypes, EventTypeRepository.RowLockMode.UPDATE);
 
-                final List<Subscription> subscriptions =
-                        subscriptionRepository.listSubscriptions(Set.of(eventType), Optional.empty(),
-                                Optional.empty(), Optional.empty());
+                final List<Subscription> subscriptions = subscriptionRepository.listAllSubscriptionsFor(eventTypes);
 
                 if (!(featureToggleService.isFeatureEnabled(DELETE_EVENT_TYPE_WITH_SUBSCRIPTIONS)
                         || onlyDeletableSubscriptions(subscriptions))) {
@@ -410,13 +401,13 @@ public class EventTypeService {
                 }
 
                 subscriptions.forEach(s -> {
-                        try {
-                            subscriptionRepository.deleteSubscription(s.getId());
-                        } catch (final NoSuchSubscriptionException e) {
-                            // should not happen as we are inside transaction
-                            throw new InconsistentStateException("Subscription to be deleted is not found", e);
-                        }
-                    });
+                    try {
+                        subscriptionRepository.deleteSubscription(s.getId());
+                    } catch (final NoSuchSubscriptionException e) {
+                        // should not happen as we are inside transaction
+                        throw new InconsistentStateException("Subscription to be deleted is not found", e);
+                    }
+                });
                 return deleteEventType(eventType);
             });
         } catch (final TransactionException e) {
@@ -464,6 +455,8 @@ public class EventTypeService {
                 authorizationValidator.authorizeEventTypeAdmin(original);
                 validateEventOwnerSelectorUnchanged(original, eventTypeBase);
             }
+            validateEventOwnerSelector(eventTypeBase);
+
             authorizationValidator.validateAuthorization(original.asResource(), eventTypeBase.asBaseResource());
             validateName(eventTypeName, eventTypeBase);
             validateCompactionUpdate(original, eventTypeBase);
@@ -502,12 +495,12 @@ public class EventTypeService {
                 LOG.error("Exception occurred when releasing usage of event-type", e);
             }
         }
-        nakadiKpiPublisher.publish(etLogEventType, () -> new JSONObject()
-                .put("event_type", eventTypeName)
-                .put("status", "updated")
-                .put("category", eventTypeBase.getCategory())
-                .put("authz", identifyAuthzState(eventTypeBase))
-                .put("compatibility_mode", eventTypeBase.getCompatibilityMode()));
+        nakadiKpiPublisher.publish(() -> new EventTypeLogEvent()
+                .setEventType(eventTypeName)
+                .setStatus("updated")
+                .setCategory(eventTypeBase.getCategory().name())
+                .setAuthz(identifyAuthzState(eventTypeBase))
+                .setCompatibilityMode(eventTypeBase.getCompatibilityMode().name()));
 
         nakadiAuditLogPublisher.publish(Optional.of(original), Optional.of(eventType),
                 NakadiAuditLogPublisher.ResourceType.EVENT_TYPE, NakadiAuditLogPublisher.ActionType.UPDATED,
@@ -591,6 +584,19 @@ public class EventTypeService {
         return eventType;
     }
 
+    /**
+     * Same as get(final String eventTypeName), but without using cache.
+     *
+     * @param eventTypeName Name of event-type to be fetched
+     * @return EventType
+     * @throws NoSuchEventTypeException if event-type does not exist
+     */
+    public EventType fetchFromRepository(final String eventTypeName) throws NoSuchEventTypeException {
+        final EventType eventType = eventTypeRepository.findByName(eventTypeName);
+        authorizationValidator.authorizeEventTypeView(eventType);
+        return eventType;
+    }
+
     private Multimap<TopicRepository, String> deleteEventType(final String eventTypeName)
             throws EventTypeDeletionException {
         try {
@@ -627,6 +633,16 @@ public class EventTypeService {
             InvalidEventTypeException {
         if (original.getAudience() != null && eventTypeBase.getAudience() == null) {
             throw new InvalidEventTypeException("event audience must not be set back to null");
+        }
+    }
+
+    static void validateEventOwnerSelector(final EventTypeBase eventType) {
+        final EventOwnerSelector selector = eventType.getEventOwnerSelector();
+        if (selector != null) {
+            if (selector.getType() == EventOwnerSelector.Type.METADATA && selector.getValue() != null) {
+                throw new InvalidEventTypeException(
+                        "event_owner_selector specifying value for type 'metadata' is not supported");
+            }
         }
     }
 
